# mli

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/conv-train/: Cargo.toml
examples/conv-train/src/: main.rs
examples/deep-train/: Cargo.toml
examples/deep-train/src/: main.rs
examples/image/: Cargo.toml
examples/image/src/: main.rs
examples/mnist/: Cargo.toml
examples/mnist/src/: main.rs
examples/sobel/: Cargo.toml
examples/sobel/src/: main.rs
mli/: Cargo.toml
mli-2d/: Cargo.toml
mli-2d/src/: lib.rs
mli-conv/: Cargo.toml
mli-conv/src/: conv.rs  conv2.rs  conv2n.rs  conv3.rs  lib.rs
mli-defconv/: Cargo.toml  README.md
mli-defconv/src/: lib.rs
mli-dense/: Cargo.toml
mli-dense/src/: dense.rs  dense1.rs  dense2.rs  lib.rs
mli-ndarray/: Cargo.toml
mli-ndarray/src/: bias.rs  bias1.rs  layernorm.rs  lib.rs  map1one.rs  map1static.rs  map2many.rs  map2one.rs  map2static.rs  map3many.rs  map3one.rs  map3static.rs  map_many.rs  map_one.rs  map_static.rs  median_center.rs  ndeep.rs  reshape3to2.rs  residual_block1.rs  rmsnorm.rs  variable.rs  weight.rs
mli-relu/: Cargo.toml
mli-relu/src/: abs.rs  blu.rs  lib.rs  relu.rs  relu_softplus.rs  single_bias.rs  softplus.rs  square.rs
mli-sigmoid/: Cargo.toml
mli-sigmoid/src/: lib.rs
mli/src/: chain.rs  chain_data.rs  empty_data.rs  lib.rs  map.rs  zip.rs
src/: lib.rs  mep.rs  nn.rs
tests/: mep.rs
