[package]
name = "mli"
version = "0.9.1"
description = "Machine Learning Interface for Rust"
documentation = "https://docs.rs/mli/"
repository = "https://github.com/vadixidav/mli"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
keywords = ["mli", "learning", "machine", "algorithm", "genetic"]
license = "Unlicense"
