[package]
name = "mli"
version = "0.10.0"
edition = "2018"
description = "Machine Learning Interface for Rust"
documentation = "https://docs.rs/mli/"
repository = "https://github.com/vadixidav/mli"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
keywords = ["learning", "machine", "combinator", "tensor"]
license = "MIT"
