[package]
name = "mli-conv"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[dependencies]
mli = { path = "../mli", version = "0.11.0" }
mli-ndarray = { path = "../mli-ndarray", version = "0.1.0" }
ndarray = "0.15.3"
numeric-array = "0.5.2"
generic-array = "0.14.4"
typenum = "1.14.0"
