[package]
name = "mli-conv"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2024"

[dependencies]
mli = { path = "../mli", version = "0.11.0" }
mli-ndarray = { path = "../mli-ndarray", version = "0.1.0" }
ndarray = "0.16.1"
numeric-array = "0.6.1"
generic-array = "1.2.0"
typenum = "1.18.0"
