[package]
name = "mli-defconv"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[dependencies]
mli = { path = "../mli", version = "0.11.0" }
mli-ndarray = { path = "../mli-ndarray", version = "0.1.0" }
ndarray = "0.12.1"
numeric-array = "0.4.1"
generic-array = "0.13.2"
typenum = "1.11.2"
arraymap = "0.1.1"
