[package]
name = "mli-defconv"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2024"

[dependencies]
mli = { path = "../mli", version = "0.11.0" }
mli-ndarray = { path = "../mli-ndarray", version = "0.1.0" }
ndarray = "0.15.3"
numeric-array = "0.5.2"
generic-array = "0.14.4"
typenum = "1.14.0"
itertools = "0.10.1"
