[package]
name = "mnist"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[dependencies]
mli = { path = "../../mli", version = "0.11.0" }
mli-conv = { path = "../../mli-conv", version = "0.1.0" }
mli-ndarray = { path = "../../mli-ndarray", version = "0.1.0" }
mli-relu = { path = "../../mli-relu", version = "0.1.0" }
mli-defconv = { path = "../../mli-defconv", version = "0.1.0" }
mli-dense = { path = "../../mli-dense", version = "0.1.0" }
mli-sigmoid = { path = "../../mli-sigmoid", version = "0.1.0" }
image = "0.23.14"
ndarray = "0.15.3"
num = "0.4.0"
rand_distr = "0.4.1"
rand_core = "0.6.3"
mnist = "0.4.1"
float-ord = "0.3.2"
rand_xoshiro = "0.6.0"
clap = { version = "4.5.27", features = ["derive"] }
