[package]
name = "mnist"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[dependencies]
mli = { path = "../../mli", version = "0.11.0" }
mli-conv = { path = "../../mli-conv", version = "0.1.0" }
mli-ndarray = { path = "../../mli-ndarray", version = "0.1.0" }
mli-relu = { path = "../../mli-relu", version = "0.1.0" }
mli-defconv = { path = "../../mli-defconv", version = "0.1.0" }
mli-dense = { path = "../../mli-dense", version = "0.1.0" }
mli-sigmoid = { path = "../../mli-sigmoid", version = "0.1.0" }
image = "0.25.5"
ndarray = "0.16.1"
num = "0.4.3"
rand_distr = "0.5.1"
rand_core = "0.9.2"
mnist = "0.6.0"
float-ord = "0.3.2"
rand_chacha = "0.9.0"
clap = { version = "4.5.31", features = ["derive"] }
